style: Ensure header menu is right-aligned using flexbox

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,10 @@ header .inner {
     align-items: center;
 }
 
+header .inner::after {
+    content: none;
+}
+
 header h1 {
     font-size: 0;
     line-height: 1;
@@ -89,7 +93,9 @@ header h1 img {
 
 /* Header Navigation */
 .right-menu {
-    float: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .right-menu ul {
